# CaseStudy_pointAnomalyDetectionInDataStreamsUsingASTDs

./: README.md
combinedmodels/: combineModels.eastd  combineModels.json
combinedmodels/generatedCode/: CMakeLists.txt  Code.cpp  README.md  combinemodels.cpp  helper.h
combinedmodels/generatedCode/learning_models/: model.h
combinedmodels/generatedCode/learning_models/KDE/: kde.cpp  kde.h
combinedmodels/generatedCode/learning_models/KMEANS/: kmeans.cpp  kmeans.h
combinedmodels/generatedCode/learning_models/LOF/: lof.cpp  lof.h
detectiononemodel/: spec_one_model.eastd  spec_one_model.eastd.json  spec_one_model.json
detectiononemodel/generatedCode/: CMakeLists.txt  Code.cpp  README.md  detectiononemodel.cpp  helper.h  spec_one_model.json
detectiononemodel/generatedCode/KDE/: kde.cpp  kde.h
detectiononemodel/generatedCode/data/: trace.txt  trace1.txt
detectiononemodel/generatedCode/inputs/: window_parameters.json
detectiononemodel/generatedCode/window/: window.cpp  window.h
